<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:animationCache="false"
    android:background="#FFFFFF"
    android:columnCount="4"
    android:rowCount="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Display"
        android:layout_height="60sp"
        android:layout_row="0"
        android:layout_rowWeight="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:background="#FFFFFF"
        android:lines="5"
        android:textColor="#000000"
        android:textSize="90sp"
        app:autoSizeMaxTextSize="90sp"
        app:autoSizeMinTextSize="22sp"
        app:autoSizeTextType="uniform" />


    <CheckBox
        android:id="@+id/ToggleFormula"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_margin="3dp"
        android:background="@drawable/circle"
        android:onClick="toggleFormulaMode"
        android:text="@string/ToggleFormula"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/AllClear"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="allClear"
        android:text="@string/AllClear"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Clear"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="clear"
        android:text="@string/Clear"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Seven"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="seven"
        android:text="@string/Seven"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Eight"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="eight"
        android:text="@string/Eight"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Nine"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="nine"
        android:text="@string/Nine"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Four"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="four"
        android:text="@string/Four"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Five"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="five"
        android:text="@string/Five"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Six"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="six"
        android:text="@string/Six"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/One"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="one"
        android:text="@string/One"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Two"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="two"
        android:text="@string/Two"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Three"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="three"
        android:text="@string/Three"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Zero"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="zero"
        android:text="@string/Zero"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Add"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="add"
        android:text="@string/Add"
        android:textSize="36sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Subtract"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="subtract"
        android:text="@string/Subtract"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Multiply"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="multiply"
        android:text="@string/Multiply"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Divide"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="divide"
        android:text="@string/Divide"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Decimal"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:background="@drawable/circle"
        android:onClick="decimal"
        android:text="@string/Decimal"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Equals"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="3dp"
        android:background="@drawable/circle"
        android:onClick="equals"
        android:text="@string/Equals"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />


</GridLayout>